--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </section>
 
     <!-- Technology & App Integration Section -->
-    <section class="bg-pattern-white py-20 relative overflow-hidden">
+    <section class="bg-pattern-light-gray scroll-mt-20 py-20 relative overflow-hidden">
         <!-- Background Elements -->
         <div class="absolute top-0 left-0 w-72 h-72 bg-green/5 rounded-full blur-3xl"></div>
         <div class="absolute bottom-0 right-0 w-96 h-96 bg-green/5 rounded-full blur-3xl"></div>
@@ -279,16 +279,7 @@
                     <div class="relative flex justify-center">
                         <img src="src/mobile-smartwatch.png" alt="Mobile App and Smartwatch Integration" class="max-w-md w-full h-70 object-contain">
                         <!-- Floating elements -->
-                        <div class="absolute -top-4 -right-4 w-16 h-16 bg-green/20 rounded-2xl flex items-center justify-center floating-animation">
-                            <svg class="w-8 h-8 text-green" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-                            </svg>
-                        </div>
-                        <div class="absolute -bottom-4 -left-4 w-12 h-12 bg-green/20 rounded-xl flex items-center justify-center floating-animation" style="animation-delay: -2s;">
-                            <svg class="w-6 h-6 text-green" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-                            </svg>
-                        </div>
+
                     </div>
                     <!-- App Download Buttons Row -->
                     <div class="flex justify-center items-center space-x-4 mt-2">
@@ -446,7 +437,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="bg-pattern-white scroll-mt-20 py-20 relative overflow-hidden">
+    <section id="contact" class="bg-pattern-light-gray scroll-mt-20 py-20 relative overflow-hidden">
         <!-- Background Pattern -->
         <div class="absolute inset-0 opacity-10">
             <div class="absolute top-10 right-10 w-64 h-64 bg-green rounded-full blur-3xl floating-animation"></div>
