--- a/index.html
+++ b/index.html
@@ -230,6 +230,26 @@
                             <p class="text-contrast-medium leading-relaxed text-sm">We're not just your trainers; we're your partners. We provide motivation, accountability, and ongoing support throughout your entire fitness journey.</p>
                         </div>
                     </div>
+
+                    <!-- Card 4: Flexibility & Convenience -->
+                    <div class="card-contrast rounded-3xl shadow-xl overflow-hidden card-hover w-72 flex-shrink-0 snap-center min-h-[400px]">
+                        <div class="relative">
+                            <div class="h-48 bg-gradient-to-br from-green/20 to-green/10 flex items-center justify-center">
+                                <div class="w-16 h-16 bg-green rounded-2xl flex items-center justify-center shadow-lg">
+                                    <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="absolute top-4 left-4 w-10 h-10 bg-green rounded-full flex items-center justify-center shadow-lg">
+                                <span class="text-white text-lg font-bold">4</span>
+                            </div>
+                        </div>
+                        <div class="p-6 text-center">
+                            <h3 class="text-xl font-bold mb-3 text-contrast">Flexibility & Convenience</h3>
+                            <p class="text-contrast-medium leading-relaxed text-sm">Train on your schedule — whether at the gym, at home, or online. Our programs adapt to your lifestyle, not the other way around.</p>
+                        </div>
+                    </div>
                 </div>
                 
                 <!-- Scroll indicators -->
@@ -237,11 +257,12 @@
                     <div class="w-2 h-2 bg-green/30 rounded-full why-scroll-indicator cursor-pointer"></div>
                     <div class="w-2 h-2 bg-green/30 rounded-full why-scroll-indicator active cursor-pointer"></div>
                     <div class="w-2 h-2 bg-green/30 rounded-full why-scroll-indicator cursor-pointer"></div>
+                    <div class="w-2 h-2 bg-green/30 rounded-full why-scroll-indicator cursor-pointer"></div>
                 </div>
             </div>
 
             <!-- Desktop: Grid layout -->
-            <div class="hidden md:grid md:grid-cols-3 gap-8">
+            <div class="hidden md:grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="card-contrast rounded-3xl shadow-xl overflow-hidden card-hover">
                     <div class="relative">
                         <div class="h-56 bg-gradient-to-br from-green/20 to-green/10 flex items-center justify-center">
@@ -262,14 +283,14 @@
                 </div>
                 <div class="card-contrast rounded-3xl shadow-xl overflow-hidden card-hover">
                     <div class="relative">
-                        <div class="h-56 bg-gradient-to-br from-blue/20 to-blue/10 flex items-center justify-center">
-                            <div class="w-20 h-20 bg-blue rounded-2xl flex items-center justify-center shadow-lg">
+                        <div class="h-56 bg-gradient-to-br from-green/20 to-green/10 flex items-center justify-center">
+                            <div class="w-20 h-20 bg-green rounded-2xl flex items-center justify-center shadow-lg">
                                 <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                                 </svg>
                             </div>
                         </div>
-                        <div class="absolute top-6 left-6 w-12 h-12 bg-blue rounded-full flex items-center justify-center shadow-lg">
+                        <div class="absolute top-6 left-6 w-12 h-12 bg-green rounded-full flex items-center justify-center shadow-lg">
                             <span class="text-white text-xl font-bold">2</span>
                         </div>
                     </div>
@@ -280,20 +301,38 @@
                 </div>
                 <div class="card-contrast rounded-3xl shadow-xl overflow-hidden card-hover">
                     <div class="relative">
-                        <div class="h-56 bg-gradient-to-br from-purple/20 to-purple/10 flex items-center justify-center">
-                            <div class="w-20 h-20 bg-purple rounded-2xl flex items-center justify-center shadow-lg">
+                        <div class="h-56 bg-gradient-to-br from-green/20 to-green/10 flex items-center justify-center">
+                            <div class="w-20 h-20 bg-green rounded-2xl flex items-center justify-center shadow-lg">
                                 <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
                                 </svg>
                             </div>
                         </div>
-                        <div class="absolute top-6 left-6 w-12 h-12 bg-purple rounded-full flex items-center justify-center shadow-lg">
+                        <div class="absolute top-6 left-6 w-12 h-12 bg-green rounded-full flex items-center justify-center shadow-lg">
                             <span class="text-white text-xl font-bold">3</span>
                         </div>
                     </div>
                     <div class="p-8 text-center">
                         <h3 class="text-2xl font-bold mb-4 text-contrast">Complete Support</h3>
                         <p class="text-contrast-medium leading-relaxed">We're not just your trainers; we're your partners. We provide motivation, accountability, and ongoing support throughout your entire fitness journey.</p>
+                    </div>
+                </div>
+                <div class="card-contrast rounded-3xl shadow-xl overflow-hidden card-hover">
+                    <div class="relative">
+                        <div class="h-56 bg-gradient-to-br from-green/20 to-green/10 flex items-center justify-center">
+                            <div class="w-20 h-20 bg-green rounded-2xl flex items-center justify-center shadow-lg">
+                                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="absolute top-6 left-6 w-12 h-12 bg-green rounded-full flex items-center justify-center shadow-lg">
+                            <span class="text-white text-xl font-bold">4</span>
+                        </div>
+                    </div>
+                    <div class="p-8 text-center">
+                        <h3 class="text-2xl font-bold mb-4 text-contrast">Flexibility & Convenience</h3>
+                        <p class="text-contrast-medium leading-relaxed">Train on your schedule — whether at the gym, at home, or online. Our programs adapt to your lifestyle, not the other way around.</p>
                     </div>
                 </div>
             </div>
