fix colors and nav in why movona

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container mx-auto px-6 grid md:grid-cols-2 items-center gap-12 relative">
             <!-- Left Column: Text -->
             <div class="text-center md:text-left text-white animate-fade-in">
-                <h1 class="text-5xl md:text-7xl font-bold leading-tight mb-6">Transform Your <span class="text-green">Body</span>, Elevate Your <span class="text-blue">Mind</span></h1>
+                <h1 class="text-5xl md:text-7xl font-bold leading-tight mb-6">Transform Your <span class="text-green">Body</span>, Elevate Your <span class="text-dark-gray">Mind</span></h1>
                 <p class="text-xl md:text-2xl mb-10 text-white/90 font-light">Achieve your fitness goals with personalized training programs designed specifically for your lifestyle and ambitions.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-6 justify-center md:justify-start">
                     <a href="#plans" class="bg-green text-white py-4 px-10 rounded-full text-lg font-semibold hover:bg-green/90 hover:scale-105 transition-all duration-300 inline-block text-center shadow-2xl pulse-green">Start Your Journey</a>
